syntax = "proto3";

package proto;

option go_package = "github.com/Jorrit05/DYNAMOS/pkg/proto";


// The greeting service definition.
service SideCar {
  // Sends a greeting
  rpc StartService (ServiceRequest) returns (ServiceReply) {}
}

// The request message containing the user's name.
message ServiceRequest {
  string serviceName = 1;
  string routingKey = 2;
  bool startConsuming = 3;
  bool queueAutoDelete = 4;
}

// The response message containing the greetings
message ServiceReply {
  string message = 1;
}
